//file:noinspection GroovyUnusedAssignment
plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
//    id 'com.google.cloud.tools.jib' version '3.3.2'
}

group = 'com.jobosint'
version = '0.0.1'

java {
    sourceCompatibility = '21'
}

allprojects {
    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }
}

ext {
    set('springCloudVersion', "2022.0.4")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    // https://github.com/mizosoft/methanol
    implementation 'com.github.mizosoft.methanol:methanol:1.7.0'
    implementation 'com.jayway.jsonpath:json-path:2.8.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    // https://mvnrepository.com/artifact/com.theokanning.openai-gpt3-java/service
    implementation 'com.theokanning.openai-gpt3-java:service:0.16.0'
    // https://mvnrepository.com/artifact/org.jsoup/jsoup
    implementation 'org.jsoup:jsoup:1.16.1'
    // https://github.com/serpapi/google-search-results-java
    implementation 'com.github.serpapi:google-search-results-java:2.0.3'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
//	testImplementation 'org.testcontainers:junit-jupiter'
//	testImplementation 'org.testcontainers:postgresql'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

